# ebpf-demos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basic_exp.py  exp_show_latest.py  setup.sh
scripts/: apply_patch.sh  apply_patch_git.sh  common.sh  compile_bpf_kern.sh  detach_xdp.sh  gen_patch.sh  gen_vmlinux_h.sh
scripts/DPDK/: color.sh  common.sh  eth_peers.config  recover_dpdk_dev_bzwx.sh  recover_dpdk_dev_nfp.sh  setup_dpdk_dev_bzwx.sh  setup_dpdk_dev_nfp.sh  setup_dpdk_hugepage.sh  start_base_receiver.sh  start_base_sender.sh  start_base_sender_bzwx.sh
src/bpf_kern/: CMakeLists.txt  common.h  copy_bpf_objs.cmake  demo_fmod_ret.c  empty_xdp.c  kprobe_demo_kern.c  skeleton.cmake
src/c/: CMakeLists.txt  common.h  demo_fmod_ret_user.c  empty_xdp_user.c  hw_offload_user.c  kprobe_demo_user.c
src/c/bpf_skel/: demo_fmod_ret.skel.h  empty_xdp.skel.h  hw_demo.skel.h  kprobe_demo_kern.skel.h
src/python/: basic_exp.py  common.py  exp_show_latest.py  libbpf.py  utils.py
src/python/demo/: demo_fmodret.py
src/python/hw_baselines/: baseline_testing.py  exp_common.py
src/python/motivation_baselines/: baseline_testing.py  exp_common.py  test_hw_features.py  test_hw_map_hash.py
